--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 # for code in this repository.
 # See https://help.github.com/articles/about-codeowners/ for details.
 
-* @mozilla/uniffi-devs
+* @badboy
